crates/shell-parser/tests/snapshots/parser_snapshots__globs__brace_no_comma_is_literal.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo {foo}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "{foo}",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
