crates/shell-parser/tests/snapshots/parser_snapshots__globs__bracket.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"ls [abc].txt\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "ls",
                    ),
                ],
            },
            Word {
                parts: [
                    Glob(
                        "[abc]",
                    ),
                    Literal(
                        ".txt",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
