crates/shell-parser/tests/snapshots/parser_snapshots__globs__question_mark.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"ls file?.txt\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "ls",
                    ),
                ],
            },
            Word {
                parts: [
                    Literal(
                        "file",
                    ),
                    Glob(
                        "?",
                    ),
                    Literal(
                        ".txt",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
